[B]1.2.8[/B]
• Now use Skin Helper Service for Music Clearlogos and CDArts
• Add ClearLogos on home screen for widgets
• Add Fanarts on home screen for widgets
• Add new Live TV widget (thanks to im85288)
• Add support for music extrafanarts with Skin Helper Service
• Add Clearlogos on music visualisation
• Add banner on music visualisation
• Add banner on tv shows info
• Add new views for images : Icons wall and List
• Add casting list on video OSD (thanks to im85288)
• Add the file size of add-ons packages
• Changes in functioning of personnalise home menu
• Changes in widgets with labels on top
• Changes for Krypton

[B]1.2.7[/B]
• Krypton : Replace changelog file with a 'news' section in addon.xml
• Add possibility to change skin color
• Add Clearlogo on video OSD
• Add IMDB flag icon on video OSD
• Add possibility to choose multi images for home menu background
• Replace year by total episodes in list views for tv shows and seasons
• Improve esthetic appearance
• Fix poster on video OSD
• Fix duration flag icon with music videos
• Fix ratings with tv shows
• Updated language files from Transifex

[B]1.2.6[/B]
• Add new icons flags : Rotten TomatoMeter, Rotten Tomatoes Audience Score and MetaCritic rating
• Add possibility to show music visualisation screen directly when playing song

[B]1.2.5[/B]
• Add changes from original Estuary 0.8.0
• Improve icons resolution
• Changes in dialog select
• Fix studios icons
• Fix missing string

[B]1.2.4[/B]
• Improve esthetic appearance
• Fix recently added episodes widget

[B]1.2.3[/B]
• Add info on Big Poster view
• Add extrafanarts support for 'Show Fanart' button on video info
• Now use Skin Helper Service for extrafanarts

[B]1.2.2[/B]
• Add album cover for next track on music OSD
• Add possibility to disable zoom effect on focus
• Add Show Path button on music video info
• Improve volume progress with unit
• Improve clock icon
• Update AudioDSPManager.xml with core changes

[B]1.2.1[/B]