@@ -251,7 +251,7 @@
         <font>
             <name>Font-Rating2</name>
             <filename>RobotoCondensed-Bold.ttf</filename>
-            <size>30</size>
+            <size>34</size>
         </font>
         <font>
             <name>Font-Volume</name>
